# scheduleparse

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/scheduleparse/: __init__.py
tests/: __init__.py
